[package]
name = "api"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Li <matthew.li10@education.nsw.gov.au>"]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4.2", features = ['http'] }
worker-macros = { version = "0.4.2", features = ['http'] }
console_error_panic_hook = { version = "0.1.1" }
http = "1.1"
serde = { version = "1.0.213", features = ["derive"] }
itertools = "0.13.0"
tap = "1.0.1"
reqwest = "0.12.8"
serde_json = "1.0.132"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
csv = "1.3.0"
web-time = "1.1.0"
macros = { path = "macros" }
prost = "0.14.1"
chrono = { version = "0.4.42", features = ["serde"] }

[build-dependencies]
prost-build = "0.14.1"
